--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -82,7 +82,6 @@
 
 .card {
   margin: 1rem;
-  flex-basis: 100%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -92,6 +91,10 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
+.hover {
+  color: #0070f3;
+  border-color: #0070f3;
+}
 .card:hover,
 .card:focus,
 .card:active {
